--- a/index.html
+++ b/index.html
@@ -41,36 +41,42 @@
   </style>
 </head>
 <body>
+  <!-- Navbar -->
   <header class="navbar">
     <a href="index.html" class="logo" style="text-decoration: none; color: inherit;">
       <img src="assets/avatar.png" alt="Logo" />
       <span>Tsukyyy</span>
     </a>
     <nav>
-      <a href="/admin/login.html">Post Story</a>
-      <a href="/admin/list.html">List</a>
+      <a href="/login.html">Post Story</a>
+      <a href="list.html">List</a>
       <a href="#about">About</a>
     </nav>
   </header>
 
+  <!-- Blog Header -->
   <main class="blog">
     <h1>Tiny stories, big feelings.</h1>
     <p class="subtitle">Sweet little stories to warm your heart 💖</p>
 
+    <!-- Dynamic Story Container -->
     <section id="story-container"></section>
 
+    <!-- Show All Button -->
     <div style="text-align: center; margin-top: 1rem;">
-      <a href="/admin/list.html">
+      <a href="list.html">
         <button class="read-btn">📚 Show All Stories</button>
       </a>
     </div>
   </main>
 
+  <!-- About -->
   <section id="about" class="about-section">
     <h2>About Me</h2>
     <p>Just a quiet corner of the internet to share little moments, feelings, and memories. Hope you feel at home here. 🌸</p>
   </section>
 
+  <!-- Footer -->
   <footer class="footer">
     <p>🌸 Made with love | 2025</p>
     <p>🌸 Connect with us on Instagram</p>
@@ -81,12 +87,14 @@
     </div>
   </footer>
 
+  <!-- Full Story Overlay -->
   <div class="story-overlay" id="storyOverlay">
     <div class="story-overlay-content" id="overlayContent">
       <button class="close-btn" onclick="closeOverlay()">Close</button>
     </div>
   </div>
 
+  <!-- Script -->
   <script>
     const overlay = document.getElementById("storyOverlay");
     const overlayContent = document.getElementById("overlayContent");
@@ -107,8 +115,7 @@
     }
 
     async function loadStories() {
-      // ⭐ THIS IS THE ONLY LINE THAT CHANGED ⭐
-      const res = await fetch('/public/stories');
+      const res = await fetch('/stories');
       const stories = await res.json();
 
       const container = document.getElementById("story-container");
