--- a/list.html
+++ b/list.html
@@ -1,203 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>All Stories - Cute Story Blog</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    /* Pagination buttons styling */
-    #pagination {
-      margin-top: 1.5rem;
-      text-align: center;
-    }
-
-    #pagination button.page-btn {
-      background: #ff70a6;
-      border: none;
-      color: white;
-      padding: 8px 14px;
-      margin: 0 6px;
-      border-radius: 12px;
-      cursor: pointer;
-      font-weight: 700;
-      font-family: 'Comic Sans MS', cursive;
-      font-size: 1rem;
-      transition: background 0.3s ease;
-    }
-
-    #pagination button.page-btn:hover:not(:disabled) {
-      background: #ff4d8b;
-    }
-
-    #pagination button.page-btn:disabled {
-      background: #a14d86;
-      cursor: default;
-      box-shadow: 0 0 10px #a14d86aa;
-      font-weight: 900;
-      font-size: 1.1rem;
-    }
-
-    #page-info {
-      text-align: center;
-      font-family: 'Comic Sans MS', cursive;
-      font-weight: bold;
-      margin-top: 1rem;
-      font-size: 1.1rem;
-      color: #a14d86;
-    }
-
-    .preview-line-purple {
-      color: #a14d86;
-      font-weight: bold;
-      display: -webkit-box;
-      -webkit-line-clamp: 1;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-    }
-
-    .preview-line-black {
-      color: #444;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-    }
-  </style>
+    <meta charset="UTF-8" />
+    <title>All Stories - Cute Story Blog</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <style>
+      /* Internal styles remain the same */
+      #pagination { margin-top: 1.5rem; text-align: center; }
+      #pagination button.page-btn { background: #ff70a6; border: none; color: white; padding: 8px 14px; margin: 0 6px; border-radius: 12px; cursor: pointer; font-weight: 700; font-family: 'Comic Sans MS', cursive; font-size: 1rem; transition: background 0.3s ease; }
+      #pagination button.page-btn:hover:not(:disabled) { background: #ff4d8b; }
+      #pagination button.page-btn:disabled { background: #a14d86; cursor: default; box-shadow: 0 0 10px #a14d86aa; font-weight: 900; font-size: 1.1rem; }
+      #page-info { text-align: center; font-family: 'Comic Sans MS', cursive; font-weight: bold; margin-top: 1rem; font-size: 1.1rem; color: #a14d86; }
+      .preview-line-purple { color: #a14d86; font-weight: bold; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical; overflow: hidden; }
+      .preview-line-black { color: #444; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; }
+    </style>
 </head>
 <body>
-  <!-- Navbar -->
-  <header class="navbar">
-    <a href="index.html" class="logo" style="text-decoration: none; color: inherit;">
-      <img src="assets/avatar.png" alt="Logo" />
-      <span>Tsukyyy</span>
-    </a>
-    <nav>
-      <a href="index.html">🏠 Home</a>
-    </nav>
-  </header>
-
-  <!-- Blog Header -->
-  <main class="blog">
-    <h1>🌸 All Stories to Warm Your Heart 🌸</h1>
-    <section id="all-story-container"></section>
-    <div id="page-info"></div>
-    <div id="pagination"></div>
-  </main>
-
-  <!-- Footer -->
-  <footer class="footer">
-    <p>🌸 Made with love | 2025</p>
-    <p>🌸 Connect with us on Instagram</p>
-    <div class="social-icons">
-      <a href="https://www.instagram.com/tsukyyy____/" target="_blank">
-        <img src="assets/insta.png" alt="Instagram" />
+    <header class="navbar">
+      <a href="index.html" class="logo" style="text-decoration: none; color: inherit;">
+        <img src="assets/avatar.png" alt="Logo" />
+        <span>Tsukyyy</span>
       </a>
-    </div>
-  </footer>
-
-  <!-- Overlay -->
-  <div class="story-overlay" id="storyOverlay">
-    <div class="story-overlay-content" id="overlayContent">
-      <button class="close-btn" onclick="closeOverlay()">Close</button>
-    </div>
-  </div>
-
-  <script>
-    const container = document.getElementById("all-story-container");
-    const pagination = document.getElementById("pagination");
-    const overlay = document.getElementById("storyOverlay");
-    const overlayContent = document.getElementById("overlayContent");
-
-    let stories = [];
-    let currentPage = 1;
-    const storiesPerPage = 7;
-
-    function closeOverlay() {
-      overlay.style.display = "none";
-    }
-
-    function openOverlay(story) {
-      overlayContent.innerHTML = `
+      <nav><a href="index.html">🏠 Home</a></nav>
+    </header>
+    <main class="blog">
+      <h1>📚 All Stories to Warm Your Heart 📚</h1>
+      <section id="all-story-container"></section>
+      <div id="page-info"></div>
+      <div id="pagination"></div>
+    </main>
+    <footer class="footer">
+      <p>🌸 Made with love | 2025</p>
+      <p>🌸 Connect with us on Instagram</p>
+      <div class="social-icons">
+        <a href="https://www.instagram.com/tsukyyy____/" target="_blank">
+          <img src="assets/insta.png" alt="Instagram" />
+        </a>
+      </div>
+    </footer>
+    <div class="story-overlay" id="storyOverlay">
+      <div class="story-overlay-content" id="overlayContent">
         <button class="close-btn" onclick="closeOverlay()">Close</button>
-        <h2>${story.title}</h2>
-        <img src="${story.image}" alt="${story.title}" />
-        <p><strong>${story.author}</strong> | <em>${story.date}</em></p>
-        <p style="white-space: pre-wrap;">${story.content}</p>
-      `;
-      overlay.style.display = "block";
-    }
+      </div>
+    </div>
 
-    function renderStories() {
-      const start = (currentPage - 1) * storiesPerPage;
-      const end = start + storiesPerPage;
-      const currentStories = stories.slice(start, end);
+    <script>
+      const container = document.getElementById("all-story-container");
+      const pagination = document.getElementById("pagination");
+      const overlay = document.getElementById("storyOverlay");
+      const overlayContent = document.getElementById("overlayContent");
+      let stories = [];
+      let currentPage = 1;
+      const storiesPerPage = 7;
 
-      if (!currentStories.length) {
-        container.innerHTML = `<p style="text-align:center; color:#999;">No stories found.</p>`;
-        pagination.innerHTML = "";
-        document.getElementById("page-info").textContent = "";
-        return;
+      function closeOverlay() { overlay.style.display = "none"; }
+      function openOverlay(story) {
+        overlayContent.innerHTML = `
+          <button class="close-btn" onclick="closeOverlay()">Close</button>
+          <h2>${story.title}</h2>
+          <img src="${story.image}" alt="${story.title}" />
+          <p><strong>${story.author}</strong> | <em>${story.date}</em></p>
+          <p style="white-space: pre-wrap;">${story.content}</p>
+        `;
+        overlay.style.display = "block";
       }
 
-      container.innerHTML = currentStories.map(story => {
-        const lines = story.content.split('\n');
-        const firstLine = lines[0] || '';
-        const restPreview = lines.slice(1).join(' ').split(' ').slice(0, 25).join(' ') + '...';
-
-        return `
-          <div class="story-card">
-            <img src="${story.image}" alt="${story.title}" />
-            <div class="text">
-              <h2>${story.title}</h2>
-              <p class="preview-line-purple">${firstLine}</p>
-              <p class="preview-line-black">${restPreview}</p>
-              <div class="story-footer">
-                <span class="author">By ${story.author}</span>
-                <span class="date">${story.date}</span>
-                <button class="read-btn" onclick='openOverlay(${JSON.stringify(story)})'>Read Full</button>
+      function renderStories() {
+        const start = (currentPage - 1) * storiesPerPage;
+        const end = start + storiesPerPage;
+        const currentStories = stories.slice(start, end);
+        if (!currentStories.length) {
+          container.innerHTML = `<p style="text-align:center; color:#999;">No stories found.</p>`;
+          pagination.innerHTML = "";
+          document.getElementById("page-info").textContent = "";
+          return;
+        }
+        container.innerHTML = currentStories.map(story => {
+          const lines = story.content.split('\n');
+          const firstLine = lines[0] || '';
+          const restPreview = lines.slice(1).join(' ').split(' ').slice(0, 25).join(' ') + '...';
+          return `
+            <div class="story-card">
+              <img src="${story.image}" alt="${story.title}" />
+              <div class="text">
+                <h2>${story.title}</h2>
+                <p class="preview-line-purple">${firstLine}</p>
+                <p class="preview-line-black">${restPreview}</p>
+                <div class="story-footer">
+                  <span class="author">By ${story.author}</span>
+                  <span class="date">${story.date}</span>
+                  <button class="read-btn" onclick='openOverlay(${JSON.stringify(story)})'>Read Full</button>
+                </div>
               </div>
             </div>
-          </div>
-        `;
-      }).join('');
-
-      renderPagination();
-    }
-
-    function renderPagination() {
-      const totalPages = Math.ceil(stories.length / storiesPerPage);
-      const pageInfo = document.getElementById("page-info");
-
-      if (totalPages <= 1) {
-        pagination.innerHTML = '';
-        pageInfo.textContent = '';
-        return;
+          `;
+        }).join('');
+        renderPagination();
       }
 
-      pageInfo.textContent = `📖 Page ${currentPage} of ${totalPages}`;
-
-      let buttons = '';
-      for (let i = 1; i <= totalPages; i++) {
-        buttons += `<button class="page-btn" ${i === currentPage ? 'disabled' : ''} onclick="goToPage(${i})">${i}</button>`;
+      function renderPagination() {
+        const totalPages = Math.ceil(stories.length / storiesPerPage);
+        const pageInfo = document.getElementById("page-info");
+        if (totalPages <= 1) {
+          pagination.innerHTML = '';
+          pageInfo.textContent = '';
+          return;
+        }
+        pageInfo.textContent = `📖 Page ${currentPage} of ${totalPages}`;
+        let buttons = '';
+        for (let i = 1; i <= totalPages; i++) {
+          buttons += `<button class="page-btn" ${i === currentPage ? 'disabled' : ''} onclick="goToPage(${i})">${i}</button>`;
+        }
+        pagination.innerHTML = buttons;
       }
-      pagination.innerHTML = buttons;
-    }
 
-    function goToPage(page) {
-      currentPage = page;
-      renderStories();
-      window.scrollTo({ top: 0, behavior: 'smooth' });
-    }
+      function goToPage(page) {
+        currentPage = page;
+        renderStories();
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+      }
 
-    async function loadStories() {
-      const res = await fetch('/stories');
-      stories = await res.json();
-      currentPage = 1;
-      renderStories();
-    }
+      async function loadStories() {
+        // ⭐ CORRECTED THIS LINE ⭐
+        const res = await fetch('/public/stories');
+        stories = await res.json();
+        currentPage = 1;
+        renderStories();
+      }
 
-    loadStories();
-  </script>
+      loadStories();
+    </script>
 </body>
 </html>
