--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <style>
-    /* ⭐ UPDATED STYLES for the preview */
+    /* ⭐ UPDATED STYLES for the new preview */
     .purple-highlight {
       color: #a14d86;
       font-weight: bold;
-      white-space: pre-wrap; /* This respects line breaks */
+      white-space: pre-wrap; /* This shows the full two lines */
     }
     .black-preview {
       color: #444;
       display: -webkit-box;
-      -webkit-line-clamp: 2;
+      -webkit-line-clamp: 2; /* This still shortens the rest of the text */
       -webkit-box-orient: vertical;
       overflow: hidden;
     }
@@ -34,31 +34,6 @@
     .read-btn:hover {
       background-color: #ff4d8b;
     }
-    .sparkle {
-      display: inline-block;
-      margin-left: 5px;
-      animation: pop-in 1s ease-out forwards, sparkle-animation 2s infinite;
-    }
-    @keyframes sparkle-animation {
-      0%, 100% { transform: scale(1); opacity: 1; }
-      50% { transform: scale(1.3) rotate(15deg); opacity: 0.8; }
-    }
-    .update-notice {
-        text-align: center;
-        color: #ff70a6;
-        font-weight: bold;
-        margin-bottom: 20px;
-        opacity: 0;
-        animation: fade-in-out 4s ease-in-out;
-    }
-    @keyframes fade-in-out {
-      0%, 100% { opacity: 0; }
-      20%, 80% { opacity: 1; }
-    }
-    @keyframes pop-in {
-      from { transform: scale(0); }
-      to { transform: scale(1); }
-    }
   </style>
 </head>
 <body>
@@ -68,26 +43,30 @@
       <span>Tsukyyy</span>
     </a>
     <nav>
-      <a href="/admin/login.html">Post Story</a>
-      <a href="/admin/list.html">List</a>
+      <a href="/login.html">Post Story</a>
+      <a href="list.html">List</a>
       <a href="#about">About</a>
     </nav>
   </header>
+
   <main class="blog">
     <h1>Tiny stories, big feelings.</h1>
     <p class="subtitle">Sweet little stories to warm your heart 💖</p>
-    <div id="update-notice-container"></div>
+
     <section id="story-container"></section>
+
     <div style="text-align: center; margin-top: 1rem;">
-      <a href="/admin/list.html">
+      <a href="list.html">
         <button class="read-btn">📚 Show All Stories</button>
       </a>
     </div>
   </main>
+
   <section id="about" class="about-section">
     <h2>About Me</h2>
     <p>Just a quiet corner of the internet to share little moments, feelings, and memories. Hope you feel at home here. 🌸</p>
   </section>
+
   <footer class="footer">
     <p>🌸 Made with love | 2025</p>
     <p>🌸 Connect with us on Instagram</p>
@@ -97,6 +76,7 @@
       </a>
     </div>
   </footer>
+
   <div class="story-overlay" id="storyOverlay">
     <div class="story-overlay-content" id="overlayContent">
       <button class="close-btn" onclick="closeOverlay()">Close</button>
@@ -110,6 +90,7 @@
     function closeOverlay() {
       overlay.style.display = "none";
     }
+
     function openOverlay(story) {
       overlayContent.innerHTML = `
         <button class="close-btn" onclick="closeOverlay()">Close</button>
@@ -122,8 +103,10 @@
     }
 
     async function loadStories() {
-      const res = await fetch('/public/stories');
+      // NOTE: This should fetch from '/public/stories' to hide archived posts
+      const res = await fetch('/public/stories'); 
       const stories = await res.json();
+
       const container = document.getElementById("story-container");
       if (!stories.length) {
         container.innerHTML = `<p style="text-align:center; color:#999;">No stories yet.</p>`;
@@ -131,49 +114,30 @@
       }
 
       const recentStories = stories.slice(0, 4);
-      let hasNewStory = false;
 
       container.innerHTML = recentStories.map(story => {
-        // ⭐ REMOVED the special logic for short stories ⭐
+        // ⭐ NEW: Updated preview logic for all stories
         const lines = story.content.split('\n');
-        const purpleLines = lines.slice(0, 2).join('\n');
-        const restOfText = lines.slice(2).join(' ');
+        const purpleLines = lines.slice(0, 2).join('\n'); // First two lines
+        const restOfText = lines.slice(2).join(' ');      // The rest of the text
         const preview = restOfText.split(' ').slice(0, 20).join(' ') + '...';
-
-        const contentHtml = `
-            <p class="purple-highlight">${purpleLines}</p>
-            <p class="black-preview">${preview}</p>
-          `;
-        const readButtonHtml = `<button class="read-btn" onclick='openOverlay(${JSON.stringify(story)})'>Read Full</button>`;
-
-        const storyDate = new Date(story.date.split(' ').reverse().join('-'));
-        const twoDaysAgo = new Date();
-        twoDaysAgo.setDate(twoDaysAgo.getDate() - 2);
-        
-        const isNew = storyDate > twoDaysAgo;
-        if (isNew) hasNewStory = true;
-        const newIndicator = isNew ? '<span class="sparkle">✨</span>' : '';
 
         return `
           <div class="story-card">
             <img src="${story.image}" alt="${story.title}" />
             <div class="text">
-              <h2>${story.title}${newIndicator}</h2>
-              ${contentHtml}
+              <h2>${story.title}</h2>
+              <p class="purple-highlight">${purpleLines}</p>
+              <p class="black-preview">${preview}</p>
               <div class="story-footer">
                 <span class="author">By ${story.author}</span>
                 <span class="date">${story.date}</span>
-                ${readButtonHtml}
+                <button class="read-btn" onclick='openOverlay(${JSON.stringify(story)})'>Read Full</button>
               </div>
             </div>
           </div>
         `;
       }).join('');
-
-      if (hasNewStory) {
-        document.getElementById('update-notice-container').innerHTML = 
-          `<p class="update-notice">🌸 Site Updated! 🌸</p>`;
-      }
     }
 
     loadStories();
