--- a/admin/admin.html
+++ b/admin/admin.html
@@ -16,14 +16,12 @@
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
       text-align: center;
     }
-
     #uploadForm {
       display: flex;
       flex-direction: column;
       gap: 1rem;
       align-items: center;
     }
-
     #uploadForm input[type="text"],
     #uploadForm textarea,
     #uploadForm input[type="file"] {
@@ -34,12 +32,10 @@
       border: 1px solid #ccc;
       font-family: 'Comic Sans MS', cursive;
     }
-
     #uploadForm textarea {
       resize: vertical;
       height: 120px;
     }
-
     #uploadForm button {
       background-color: #ff70a6;
       color: white;
@@ -51,17 +47,14 @@
       font-family: 'Comic Sans MS', cursive;
       transition: background 0.3s ease;
     }
-
     #uploadForm button:hover {
       background-color: #ff4d8b;
     }
-
     #statusMsg {
       margin-top: 0.5rem;
       font-size: 0.9rem;
       color: #a14d86;
     }
-
     .show-all-btn {
       background: #ff70a6;
       color: white;
@@ -75,12 +68,24 @@
       box-shadow: 0 4px 15px rgba(255, 112, 166, 0.3);
       transition: background 0.3s ease, transform 0.2s;
     }
-
     .show-all-btn:hover {
       background: #ff4d8b;
       transform: translateY(-2px);
     }
-
+    
+    /* ⭐ NEW STYLES for the preview section */
+    .purple-highlight {
+      color: #a14d86;
+      font-weight: bold;
+      white-space: pre-wrap;
+    }
+    .black-preview {
+      color: #444;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+    }
     .story-info p {
       margin-bottom: 8px;
     }
@@ -88,7 +93,6 @@
 </head>
 <body>
 
-  <!-- ✅ Navbar -->
   <header class="navbar">
     <a href="../admin/admin.html" class="logo" style="text-decoration: none; color: inherit;">
       <img src="../assets/avatar.png" alt="Logo" />
@@ -100,7 +104,6 @@
     </nav>
   </header>
 
-  <!-- 📤 Upload Form -->
   <main class="admin-upload">
     <h1>📚 Upload a New Story</h1>
     <form id="uploadForm" enctype="multipart/form-data">
@@ -113,7 +116,6 @@
     </form>
   </main>
 
-  <!-- 🌸 Recent Stories Preview -->
   <section class="recent-posts">
     <h2 style="text-align:center; color:#ff70a6;">🌸 Recent Stories</h2>
     <div class="story-list" id="recentStories"></div>
@@ -124,8 +126,6 @@
     </div>
   </section>
 
-  <!-- 🌸 Footer -->
-  <!-- Footer -->
   <footer class="footer">
     <p>🌸 Made with love | 2025</p>
     <p>🌸 Connect with us on Instagram</p>
@@ -136,30 +136,26 @@
     </div>
   </footer>
 
-  <!-- Story Overlay -->
   <div class="story-overlay" id="storyOverlay">
     <div class="story-overlay-content" id="overlayContent">
       <button class="close-btn" onclick="closeOverlay()">Close</button>
     </div>
   </div>
 
-  <!-- Script -->
   <script>
     const form = document.getElementById('uploadForm');
     const statusMsg = document.getElementById('statusMsg');
     const recentContainer = document.getElementById('recentStories');
     const overlay = document.getElementById('storyOverlay');
     const overlayContent = document.getElementById('overlayContent');
+    let stories = []; // ⭐ Made global for reliability
 
+    // Upload form logic (UNCHANGED)
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
       const formData = new FormData(form);
-
       try {
-        const res = await fetch('/upload', {
-          method: 'POST',
-          body: formData
-        });
+        const res = await fetch('/upload', { method: 'POST', body: formData });
         const result = await res.json();
         if (result.success) {
           statusMsg.innerText = "✅ Story uploaded successfully!";
@@ -189,9 +185,15 @@
       overlay.style.display = "block";
     }
 
+    // ⭐ New reliable way to handle button clicks
+    function handleRead(storyId) {
+        const story = stories.find(s => s._id === storyId);
+        if (story) openOverlay(story);
+    }
+
     async function loadRecentStories() {
-      const res = await fetch('/stories');
-      const stories = await res.json();
+      const res = await fetch('/stories'); // Correctly fetches all stories for admin view
+      stories = await res.json();
       if (!stories.length) {
         recentContainer.innerHTML = `<p style="text-align:center; color:#999;">No stories yet.</p>`;
         return;
@@ -199,25 +201,23 @@
 
       const recent = stories.slice(0, 4);
       recentContainer.innerHTML = recent.map(story => {
+        // ⭐ UPDATED: New preview logic
         const lines = story.content.split('\n');
-        const firstLine = lines[0] || '';
-        const previewLines = lines.slice(1).join(' ').split(' ').slice(0, 20).join(' ') + '...';
+        const purpleLines = lines.slice(0, 2).join('\n');
+        const restOfText = lines.slice(2).join(' ');
+        const preview = restOfText.split(' ').slice(0, 20).join(' ') + '...';
 
         return `
           <div class="story-card">
             <img src="${story.image}" alt="${story.title}" />
             <div class="story-info">
               <h3>${story.title}</h3>
-              <p style="color: #a14d86; font-weight:bold; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical; overflow: hidden;">
-                ${firstLine}
-              </p>
-              <p style="color:#444; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden;">
-                ${previewLines}
-              </p>
+              <p class="purple-highlight">${purpleLines}</p>
+              <p class="black-preview">${preview}</p>
               <div class="story-footer">
                 <span class="author">By ${story.author}</span>
                 <span class="date">${story.date}</span>
-                <button class="read-btn" onclick='openOverlay(${JSON.stringify(story)})'>Read Full</button>
+                <button class="read-btn" onclick="handleRead('${story._id}')">Read Full</button>
               </div>
             </div>
           </div>
