--- a/admin/list.html
+++ b/admin/list.html
@@ -6,82 +6,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../style.css" />
   <style>
-    #pagination {
-      margin-top: 1.5rem;
-      text-align: center;
-    }
-    #pagination button.page-btn {
-      background: #ff70a6;
-      border: none;
-      color: white;
-      padding: 8px 14px;
-      margin: 0 6px;
-      border-radius: 12px;
-      cursor: pointer;
-      font-weight: 700;
-      font-family: 'Comic Sans MS', cursive;
-      font-size: 1rem;
-      transition: background 0.3s ease;
-    }
-    #pagination button.page-btn:hover:not(:disabled) {
-      background: #ff4d8b;
-    }
-    #pagination button.page-btn:disabled {
-      background: #a14d86;
-      cursor: default;
-      box-shadow: 0 0 10px #a14d86aa;
-      font-weight: 900;
-      font-size: 1.1rem;
-    }
-    #page-info {
-      text-align: center;
-      font-family: 'Comic Sans MS', cursive;
-      font-weight: bold;
-      margin-top: 1rem;
-      font-size: 1.1rem;
-      color: #a14d86;
-    }
-    .admin-buttons {
-      margin-top: 8px;
-      display: flex;
-      gap: 10px;
-    }
-    .admin-buttons button {
-      padding: 6px 12px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: bold;
-      font-family: 'Comic Sans MS', cursive;
-    }
+    #pagination { margin-top: 1.5rem; text-align: center; }
+    #pagination button.page-btn { background: #ff70a6; border: none; color: white; padding: 8px 14px; margin: 0 6px; border-radius: 12px; cursor: pointer; font-weight: 700; font-family: 'Comic Sans MS', cursive; font-size: 1rem; transition: background 0.3s ease; }
+    #pagination button.page-btn:hover:not(:disabled) { background: #ff4d8b; }
+    #pagination button.page-btn:disabled { background: #a14d86; cursor: default; box-shadow: 0 0 10px #a14d86aa; font-weight: 900; font-size: 1.1rem; }
+    #page-info { text-align: center; font-family: 'Comic Sans MS', cursive; font-weight: bold; margin-top: 1rem; font-size: 1.1rem; color: #a14d86; }
+    .admin-buttons { margin-top: 8px; display: flex; gap: 10px; }
+    .admin-buttons button { padding: 6px 12px; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; font-family: 'Comic Sans MS', cursive; }
     .edit-btn { background-color: #ffd36b; }
     .delete-btn { background-color: #ff6b6b; color: white; }
     .archive-btn { background-color: #a0c4ff; }
     .unarchive-btn { background-color: #90ee90; }
-
     .story-card .text p { margin: 4px 0; }
     .story-card h2 { margin-bottom: 6px; }
-    .story-footer {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-      margin-top: 8px;
-    }
-    .read-btn {
-      background-color: #ff70a6;
-      color: white;
-      border: none;
-      border-radius: 20px;
-      padding: 6px 14px;
-      font-family: 'Comic Sans MS', cursive;
-      font-weight: bold;
-      cursor: pointer;
-    }
+    .story-footer { display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; margin-top: 8px; }
+    .read-btn { background-color: #ff70a6; color: white; border: none; border-radius: 20px; padding: 6px 14px; font-family: 'Comic Sans MS', cursive; font-weight: bold; cursor: pointer; }
     .read-btn:hover { background-color: #ff4d8b; }
-    .story-card.archived {
-        opacity: 0.6;
-        background-color: #f0f0f0;
+    .story-card.archived { opacity: 0.6; background-color: #f0f0f0; }
+
+    /* ⭐ UPDATED STYLES for the new preview */
+    .purple-highlight {
+      color: #a14d86;
+      font-weight: bold;
+      white-space: pre-wrap;
+    }
+    .black-preview {
+      color: #444;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
     }
   </style>
 </head>
@@ -143,14 +97,14 @@
       overlay.style.display = "block";
     }
 
-    function handleRead(button) {
-      const story = JSON.parse(decodeURIComponent(button.dataset.story));
-      openOverlay(story);
+    // ⭐ UPDATED: Functions now use the story's ID, which is more reliable
+    function handleRead(storyId) {
+      const story = stories.find(s => s._id === storyId);
+      if (story) openOverlay(story);
     }
 
-    function handleEdit(button) {
-      const story = JSON.parse(decodeURIComponent(button.dataset.story));
-      window.location.href = `edit.html?id=${story._id}`;
+    function handleEdit(storyId) {
+      window.location.href = `edit.html?id=${storyId}`;
     }
     
     async function toggleArchiveStatus(storyId, isArchived) {
@@ -163,9 +117,7 @@
 
         if (res.ok) {
           const story = stories.find(s => s._id === storyId);
-          if (story) {
-            story.isArchived = !isArchived;
-          }
+          if (story) story.isArchived = !isArchived;
           renderStories(); 
           statusMsg.textContent = `✅ Story ${!isArchived ? 'archived' : 'unarchived'} successfully!`;
         } else {
@@ -190,35 +142,27 @@
       }
 
       container.innerHTML = currentStories.map(story => {
+        // ⭐ UPDATED: New preview logic
         const lines = story.content.split('\n');
-        const firstLine = lines[0] || '';
-        const previewLines = lines.slice(1).join(' ').split(' ').slice(0, 30).join(' ') + '...';
+        const purpleLines = lines.slice(0, 2).join('\n');
+        const restOfText = lines.slice(2).join(' ');
+        const preview = restOfText.split(' ').slice(0, 20).join(' ') + '...';
 
         const isArchived = story.isArchived || false;
-        const archiveButton = `
-          <button 
-            class="${isArchived ? 'unarchive-btn' : 'archive-btn'}" 
-            onclick='toggleArchiveStatus("${story._id}", ${isArchived})'>
-            ${isArchived ? 'Unarchive' : 'Archive'}
-          </button>
-        `;
+        const archiveButton = `<button class="${isArchived ? 'unarchive-btn' : 'archive-btn'}" onclick='toggleArchiveStatus("${story._id}", ${isArchived})'>${isArchived ? 'Unarchive' : 'Archive'}</button>`;
 
         return `
           <div class="story-card ${isArchived ? 'archived' : ''}">
             <img src="${story.image || '/assets/default.png'}" alt="${story.title}" />
             <div class="text">
               <h2>${story.title} ${isArchived ? '(Archived)' : ''}</h2>
-              <p style="font-weight: bold; color: #a14d86; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical; overflow: hidden;">
-                ${firstLine}
-              </p>
-              <p style="color: #444; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden;">
-                ${previewLines}
-              </p>
+              <p class="purple-highlight">${purpleLines}</p>
+              <p class="black-preview">${preview}</p>
               <div class="story-footer">
                 <span class="date">${story.date}</span>
-                <button class="read-btn" data-story='${encodeURIComponent(JSON.stringify(story))}' onclick="handleRead(this)">Read Full</button>
+                <button class="read-btn" onclick="handleRead('${story._id}')">Read Full</button>
                 <div class="admin-buttons">
-                  <button class="edit-btn" data-story='${encodeURIComponent(JSON.stringify(story))}' onclick="handleEdit(this)">Edit</button>
+                  <button class="edit-btn" onclick="handleEdit('${story._id}')">Edit</button>
                   ${archiveButton}
                   <button class="delete-btn" onclick='deleteStory("${story._id}")'>Delete</button>
                 </div>
@@ -234,15 +178,8 @@
     function renderPagination() {
       const totalPages = Math.ceil(stories.length / storiesPerPage);
       const pageInfo = document.getElementById("page-info");
-
-      if (totalPages <= 1) {
-        pagination.innerHTML = '';
-        pageInfo.textContent = '';
-        return;
-      }
-
+      if (totalPages <= 1) { pagination.innerHTML = ''; pageInfo.textContent = ''; return; }
       pageInfo.textContent = `📖 Page ${currentPage} of ${totalPages}`;
-
       let buttons = '';
       for (let i = 1; i <= totalPages; i++) {
         buttons += `<button class="page-btn" ${i === currentPage ? 'disabled' : ''} onclick="goToPage(${i})">${i}</button>`;
@@ -264,22 +201,20 @@
     }
 
     async function deleteStory(id) {
-      const confirmed = confirm("Are you sure you want to delete this story?");
-      if (!confirmed) return;
-
+      if (!confirm("Are you sure you want to delete this story?")) return;
       try {
         const res = await fetch(`/stories/${id}`, { method: 'DELETE' });
         if (res.ok) {
           stories = stories.filter(s => s._id !== id);
           renderStories();
           statusMsg.textContent = "✅ Story deleted successfully!";
-          setTimeout(() => statusMsg.textContent = "", 3000);
         } else {
           statusMsg.textContent = "❌ Failed to delete story.";
         }
       } catch (err) {
         statusMsg.textContent = "⚠️ Error deleting story.";
       }
+      setTimeout(() => statusMsg.textContent = "", 3000);
     }
 
     loadStories();
